[package]
name = "dictpress"
description = " Application for building and publishing full fledged dictionary websites and APIs for any language."
homepage = "https://dict.press"
repository = "https://github.com/knadh/dictpress"
license = "AGPL-3.0"
authors = ["Kailash Nadh <kailash@nadh.in>"]

version = "0.1.0"
rust-version = "1.91"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["form"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize", "send"] }
clap = { version = "4", features = ["derive"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tera = "1"
yesqlr = "0.1.1"
yesqlr_macros = "0.2"
rust-embed = "8"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
lazy_static = "1"
thiserror = "2"
mime_guess = "2"
regex = "1"
csv = "1"
base64 = "0.22"
rust-stemmers = "1.2"
foyer = "0.21"
bytes = "1"
bincode = "1"
rmp-serde = "1"
md5 = "0.8"
mimalloc = { version = "0.1", default-features = false }

[features]
default = []
# Use mimalloc for musl builds (musl's malloc is very slow)
musl = []

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1